# STDF-Viewer

./: .gitattributes  .gitignore  README.md  README_CN.md  STDF Viewer.py  STDF-Viewer.config  STDF-Viewer.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml  cy.patch  qt.py.patch  rthooks.dat.patch
build_tools/: clean.py  linux.pickle  linux.spec  macos.icns  macos.pickle  macos.spec  pickleFinalFileTree.py  removePyinstallerHooks.py  windows.pickle  windows.spec
build_tools/STDF-Viewer-emptyDEB/DEBIAN/: control
build_tools/STDF-Viewer-emptyDEB/usr/share/applications/: stdf-viewer.desktop
build_tools/STDF-Viewer-emptyDEB/usr/share/doc/stdf-viewer/: copyright
build_tools/STDF-Viewer-emptyDMG/: dmg.json  stdfViewer_installer.icns
